# pico-c-adxl345

./: CMakeLists.txt  README.md  copy_utf2.sh
.devcontainer/: devcontainer.json  docker-compose.yml
lib/: CMakeLists.txt  pico_adxl345.c  pico_adxl345.h
lib/include/pico_adxl345/: adxl345.h  defines.h  pico_adxl345.h  types.h  utils.h
lib/src/: adxl345.c  pico_adxl345.c  utils.c
src/: example.c  main.c
